# friture

./: .gitignore  CMakeLists.txt
AddGaussianToImage/: AddGaussianToImage.cxx  CMakeLists.txt
AntiAlias/: AntiAlias.cxx  CMakeLists.txt
ApplyGaussian/: ApplyGaussian.cxx  CMakeLists.txt
AssignTrackToMembrane/: AssignTrackToMembrane.cxx  CMakeLists.txt  assign.py  radius10.vtk  radius5.vtk
BinaryClosingImageFilter/: BinaryClosingImageFilter.cxx  CMakeLists.txt
BinaryDilateImageFilter/: BinaryDilateImageFilter.cxx  CMakeLists.txt
BinaryErodeImageFilter/: BinaryErodeImageFilter.cxx  CMakeLists.txt
BinaryOpeningImageFilter/: BinaryOpeningImageFilter.cxx  CMakeLists.txt
BinaryPruningImageFilter/: BinaryPruningImageFilter.cxx  CMakeLists.txt
BinaryThreshold/: BinaryThreshold.cxx  CMakeLists.txt
ComputeCentroid/: CMakeLists.txt  ComputeCentroid.cxx
ConnectedComponents/: CMakeLists.txt  ConnectedComponents.cxx
Decimate/: CMakeLists.txt  Decimate.cxx
ExportFileTovtkPolyData/: CMakeLists.txt  ExportFileTovtkPolyData.cxx  itkGoFigure2TableToSegmentation.h  itkGoFigure2TableToSegmentation.txx  vtkPolyDataMySQLTextReader.h
Extract/: CMakeLists.txt  Extract.cxx
FMMResultsToLabelMap/: CMakeLists.txt  FMMResultsToLabelMap.cxx
FastMarching/: CMakeLists.txt  fmm.cxx
FlipImage/: CMakeLists.txt  FlipImage.cxx
Gaussian4D/: CMakeLists.txt  Gaussian4D.cxx
GaussianSmoothing/: CMakeLists.txt  GaussianSmoothing.cxx
GenerateModelsFromLabels/: CMakeLists.txt  GenerateModelsFromLabels.cxx
KMeans/: CMakeLists.txt  KMeans.cxx
LargestConnectedComponent/: CMakeLists.txt  LargestConnectedComponent.cxx
MedianFilter/: CMakeLists.txt  MedianFilter.cxx
MegaCaptureToMHA/: CMakeLists.txt  MegaCaptureToMHA.cxx  itkMegaCaptureToMHA.h  itkTileImageReader3D.h  itkTileImageReader3D.txx
PadImageFilter/: CMakeLists.txt  PadImageFilter.cxx
Pipeline/: embryo_binary_mask.txt
Scripts/: EmbryoBinaryMask.sh.in  PreprocessSpeedImage.sh.in
SegmentationToImportFile/: CMakeLists.txt  SegmentationToImportFile.cxx  itkCellSegmentationStatistics.h  itkCellSegmentationStatistics.txx  itkSegmentationToGoFigure2Table.h  itkSegmentationToGoFigure2Table.txx  vtkPolyDataMySQLTextWriter.h
SeriesImage4D/: CMakeLists.txt  SeriesImage4D.cxx
SpeedImage/: CMakeLists.txt  SpeedImage.cxx
Threshold/: CMakeLists.txt  Threshold.cxx
